# enciclopedia

./: Cargo.toml  README.md  index.html
.github/workflow/: ci.yml
.github/workflows/: ci.yml  fetch_assets.yml
assets/: liquid_metadatas.json
css/: base.css
src/: asset.rs  asset_entry.rs  main.rs  registry.rs
