[package]
version = "0.1.0"
name = "Enciclopedia"
repository = "https://github.com/lvaccaro/Enciclopedia"
authors = ["Luca Vaccaro <me@lvaccaro.com>"]
description = "Liquid Asset Enciclopedia"
categories = ["liquid"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[dependencies]
strum = "0.25"
strum_macros = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yew = { version = "0.21.0", features = ["csr"] }
elements = { version = "0.22", features = ["serde"] }
indexmap = {version = "1.9.1", features = ["serde-1"]}
reqwest = { version = "0.11.22", features = ["json"] }
base64 = "0.21.5"
gloo = "0.5.0"
gloo-storage = "0.2.0"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
pulldown-cmark = { version = "0.9", default-features = false }

lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
maud = "0.22.1"
futures = "0.3.29"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]
